<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="plugin_label">TaskPlugin</string>
    <string name="plugin_hint">Custom taskbar</string>
    <string name="system_ui_overlay_name" translatable="false">Boringdroid SystemUI overlay</string>
    <string name="system_ui_debug_name">BoringdroidSystemUIDebug</string>

    <string name="compatible_set">Compatible Set</string>
    <string name="user">User</string>
    <string name="search">Search...</string>
    <string name="power_off">Power off</string>
    <string name="restart">Restart</string>
    <string name="resume_todownload">Restart</string>
    <string name="soft_restart">Soft restart</string>
    <string name="lock">Log Out</string>
    <string name="pin">Pin</string>
    <string name="move">Move</string>

    <!--User context menu-->
    <string name="users">Users</string>
    <string name="files">Files</string>
    <string name="dock_settings">Dock Setting</string>
    <string name="settings">Settings</string>
    <string name="open">Open</string>
    <string name="recents">Recent tasks</string>
    <string name="empty_trash">Empty trash</string>
    <string name="close">Close</string>
    <string name="close_overview">Close</string>
    <string name="todesk">Create desktop shortcut</string>
    <string name="compatible_config">compatible config</string>
    <string name="uninstall">Uninstall</string>
    <string name="close_wifi">Close</string>
    <string name="hide">Minimize</string>
    <string name="minimize">Minimize</string>

    <string name="tablet_mode_on">Tablet mode on</string>
    <string name="tablet_mode_off">Tablet mode off</string>
    <string name="silenced_notifications">Silenced notifications for this app</string>
    <string name="notifications">Notifications</string>
    <string name="popups_disabled">Notification pop-ups disabled</string>

    <string name="fde_wifi_name">"Network SSID"</string>
    <string name="fde_wifi_password">"password"</string>
    <string name="fde_enter_wifi_name">"Enter Network SSID"</string>
    <string name="fde_enter_wifi_password">"Enter password"</string>
    <string name="fde_wifi">WIFI</string>
    <string name="fde_ethernet">Ethernet</string>
    <string name="fde_ethernet_and_wifi">Ethernet and WIFI</string>
    <string name="fde_add_wifi">ADD NETWORK</string>
    <string name="fde_manuals_add_wifi">ADD NETWORK...</string>
    <string name="fde_choose_nearby_wifi">AVAILABLE NETWORKS</string>
    <string name="fde_btn_cancel">Cancel</string>
    <string name="fde_btn_confirm">OK</string>
    <string name="fde_btn_operating_error">You are operating too fast</string>
    <string name="fde_scanning">Scanning</string>
    <string name="fde_connecting">Connecting</string>
    <string name="fde_forget">Forget</string>
    <string name="fde_del_network">delete network</string>
    <string name="fde_unconnect">disconnect network</string>
    <string name="fde_no_save">Do not save</string>
    <string name="fde_has_connected">connected</string>
    <string name="fde_has_saved">saved</string>
    <string name="fde_no_wifi_module">no wifi module</string>
    <string name="fde_net_mask">"mask"</string>
    <string name="fde_net_input_mask">"enter mask"</string>
    <string name="fde_net_invalid_mask">"invalid mask"</string>
    <string name="fde_save">Save</string>
    <string name="fde_input_hint">please input data</string>
    <string name="fde_collect">collect</string>
    <string name="fde_uncollect">cancel Favorite</string>
    <string name="fde_lock_screen">Lock Screen</string>
    <string name="fde_log_off">Log Off</string>
    <string name="fde_restart">Restart</string>
    <string name="fde_shutdown">Shutdown</string>
    <string name="fde_search">Search App</string>
    <string name="fde_more_net_setting">more net settings</string>
    <string name="fde_not_open_wifi">please open wifi</string>
    <string name="fde_has_saved_wifi">Network saved</string>
    <string name="fde_has_nosaved_wifi">Other networks</string>
    <string name="fde_app_name_title">appName</string>

    <string name="fde_notification_battery">"battery management"</string>
    <string name="fde_notification_volume">"volume management"</string>
    <string name="fde_notification_network">"network management"</string>
    <string name="fde_notification_message">"notice management"</string>
    <string name="fde_control_center">"control center"</string>
    <string name="wifi_string">WIFI</string>
    <string name="printscreen_string">PrintScreen</string>
    <string name="printscreen_region_string">PrintScreenRegion</string>
    <string name="recordscreen_string">ScreenRecord</string>
    <string name="success_recordscreen_string">Saved successfully in gallery</string>
    <string name="finish_recordscreen_string">Finish Record</string>
    <string name="savepower_string">PowerSave</string>
    <string name="setting_string">Setting</string>

    <string name="cleartext">Clear</string>
    <string name="no_notification">No Notification</string>
    <string name="just_now">Now</string>
    <string name="minute">minutes</string>
    <string name="hours">hours</string>
    <string name="days">days</string>
    <string name="recording">recording</string>
    <string name="fde_tips">Warning</string>
    <string name="fde_sync_config_from_gitee">Do you want to synchronize the latest configuration from Gitee?</string>

    <string name="output">Output</string>
    <string name="input">Input</string>
    <string name="about_string">About</string>
    <string name="system_setting_string">Setting</string>
    <string name="sleep_string">Sleep</string>
    <string name="message_count">%d Messages</string>
    <string name="app_list">app list</string>

    <string name="unpin">Unpin</string>
    <string name="exit">Exit</string>
    <string name="show">Show</string>
    <string name="search_all_app">Search All App</string>
    <string name="global_search">Global Search</string>
    <string name="no_matching_item">No matching items available</string>
    <string name="application">Application</string>
    <string name="clear_text">Clear</string>
    <string name="ime_setting">IME Setting</string>
    <string name="sound">Sound</string>
    <string name="set_output">Output</string>
    <string name="set_input">Input</string>
    <string name="sound_more_set">More</string>

    <string name="top_power">Power</string>
    <string name="top_message">Message</string>
    <string name="top_control">Control</string>
    <string name="top_search">Search</string>
    <string name="top_battery">Battery</string>
    <string name="top_volume">Volume</string>
    <string name="top_wifi">Wifi</string>
    <string name="top_ime">IME</string>
    <string name="top_home">Desktop</string>
    <string name="no_device">No device</string>

    <string name="openfde_version">OpenFDE version</string>
    <string name="android_version">Android version</string>
    <string name="check_verson">Check version</string>
    <string name="already_latest">Already latested</string>
    <string name="update_to_version">Update to version</string>
    <string name="pause">Pause Download</string>
    <string name="update_now">Restart to pdate now</string>
    <string name="update_next">Update on next startup</string>
    <string name="download_complete">Download complete</string>
    <string name="update">update</string>
    <string name="version_update">Update OpenFDE</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="not_open">Not enabled</string>
    <string name="enabled">Enabled</string>
</resources>
