<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="top|left"
    android:background="@color/fde_bg"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtWifiName"
        android:layout_width="match_parent"
        android:text="TEST"
        android:gravity="center|left"
        android:paddingVertical="12dp"
        android:layout_marginHorizontal="22dp"
        android:textColor="@color/app_black_light"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/editPassword"
        android:inputType="textPassword"
        android:background="@color/fde_edit_bg"
        android:layout_width="268dp"
        android:layout_marginVertical="12dp"
        android:layout_marginHorizontal="22dp"
        android:paddingHorizontal="16dp"
        android:textSize="12sp"
        android:layout_gravity="center|left"
        android:textColor="@color/app_black_light"
        android:paddingVertical="8dp"
        android:hint="@string/fde_enter_wifi_password"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        android:gravity="right"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/txtConfirm"
            android:layout_width="80dp"
            android:text="@string/fde_btn_confirm"
            android:gravity="center"
            android:background="@drawable/round_rect_blue_8dp"
            android:layout_marginRight="12dp"
            android:textColor="@color/white"
            android:layout_height="32dp"/>


        <TextView
            android:id="@+id/txtCancel"
            android:layout_width="80dp"
            android:text="@string/fde_btn_cancel"
            android:layout_marginRight="22dp"
            android:gravity="center"
            android:background="@drawable/round_rect_grep_8dp"
            android:textColor="@color/black"
            android:layout_height="32dp"/>

    </LinearLayout>



</LinearLayout>