<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="right|top"
    >

    <com.fde.taskplugin.view.LoadedCardView
        android:id="@+id/root_blur"
        android:layout_width="@dimen/top_bar_power_width"
        android:layout_height="@dimen/top_bar_power_height"
        android:orientation="vertical"
        app:cardCornerRadius="8dp"
        app:cardElevation="12dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        >
<!--        <ImageView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:src="@drawable/custom_card_background" />-->

        <LinearLayout
            android:layout_width="@dimen/top_bar_power_width"
            android:layout_height="@dimen/top_bar_power_height"
            android:orientation="vertical"
            android:background="@drawable/round_rect_8dp_d1"
            >
            <TextView
                android:id="@+id/about_tv"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_alignParentLeft="true"
                android:layout_marginHorizontal="@dimen/top_text_margin"
                android:paddingHorizontal="@dimen/top_text_padding"
                android:layout_marginTop="5dp"
                android:layout_centerVertical="true"
                android:textColor="#e6000000"
                android:textSize="14sp"
                android:lineSpacingExtra="5.2sp"
                android:gravity="left|center_vertical"
                android:text="@string/about_string"
                style="@style/style_55"
                />
            <TextView
                android:id="@+id/setting_tv"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_alignParentLeft="true"
                android:layout_marginHorizontal="@dimen/top_text_margin"
                android:paddingHorizontal="@dimen/top_text_padding"
                android:layout_centerVertical="true"
                android:textColor="#e6000000"
                android:textSize="14sp"
                android:lineSpacingExtra="5.2sp"
                android:gravity="left|center_vertical"
                android:text="@string/system_setting_string"
                style="@style/style_55"
                />
            <View
                android:layout_marginVertical="5dp"
                android:layout_width="130dp"
                android:layout_height="1dp"
                android:layout_marginHorizontal="10dp"
                android:background="#1a000000"
                />
            <TextView
                android:id="@+id/sleep_tv"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_alignParentLeft="true"
                android:layout_marginHorizontal="@dimen/top_text_margin"
                android:paddingHorizontal="@dimen/top_text_padding"
                android:layout_centerVertical="true"
                android:textColor="#e6000000"
                android:textSize="14sp"
                android:lineSpacingExtra="5.2sp"
                android:gravity="left|center_vertical"
                android:text="@string/sleep_string"
                style="@style/style_55"
                />
            <TextView
                android:id="@+id/shutdown_tv"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_alignParentLeft="true"
                android:layout_marginHorizontal="@dimen/top_text_margin"
                android:paddingHorizontal="@dimen/top_text_padding"
                android:layout_centerVertical="true"
                android:textColor="#e6000000"
                android:textSize="14sp"
                android:lineSpacingExtra="5.2sp"
                android:gravity="left|center_vertical"
                android:text="@string/fde_shutdown"
                style="@style/style_55"
                />
            <TextView
                android:id="@+id/reboot_tv"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_alignParentLeft="true"
                android:layout_marginHorizontal="@dimen/top_text_margin"
                android:paddingHorizontal="@dimen/top_text_padding"
                android:layout_centerVertical="true"
                android:textColor="#e6000000"
                android:textSize="14sp"
                android:lineSpacingExtra="5.2sp"
                android:gravity="left|center_vertical"
                android:text="@string/fde_restart"
                style="@style/style_55"
                />
            <View
                android:id="@+id/divider"
                android:layout_marginVertical="5dp"
                android:layout_width="130dp"
                android:layout_height="1dp"
                android:layout_marginHorizontal="10dp"
                android:background="#1a000000"
                />
            <TextView
                android:id="@+id/logout_tv"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_alignParentLeft="true"
                android:layout_marginHorizontal="@dimen/top_text_margin"
                android:paddingHorizontal="@dimen/top_text_padding"
                android:layout_centerVertical="true"
                android:textColor="#e6000000"
                android:textSize="14sp"
                android:lineSpacingExtra="5.2sp"
                android:gravity="left|center_vertical"
                android:text="@string/fde_log_off"
                style="@style/style_55"
                />
            <TextView
                android:id="@+id/lock_tv"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_alignParentLeft="true"
                android:layout_marginHorizontal="@dimen/top_text_margin"
                android:paddingHorizontal="@dimen/top_text_padding"
                android:layout_centerVertical="true"
                android:textColor="#e6000000"
                android:textSize="14sp"
                android:lineSpacingExtra="5.2sp"
                android:gravity="left|center_vertical"
                android:text="@string/fde_lock_screen"
                style="@style/style_55"
                />

        </LinearLayout>
    </com.fde.taskplugin.view.LoadedCardView>

</RelativeLayout>