<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.fde.taskplugin.view.LoadedCardView
        android:id="@+id/root_blur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="8dp"
        app:cardCornerRadius="8dp"
        >
        <LinearLayout
            android:id="@+id/contex_ll"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_rect_8dp_d1"
            android:paddingVertical="9dp">

            <TextView
                android:id="@+id/open_tv"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_alignParentLeft="true"
                android:layout_marginHorizontal="@dimen/top_text_margin"
                android:paddingHorizontal="@dimen/top_text_padding"
                android:layout_centerVertical="true"
                android:textColor="#e6000000"
                android:textSize="14sp"
                android:maxLines="1"
                android:lineSpacingExtra="5.2sp"
                android:gravity="left|center_vertical"
                android:text="@string/open"
                style="@style/style_55"
                />

            <TextView
                android:id="@+id/short_tv"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_alignParentLeft="true"
                android:layout_marginHorizontal="@dimen/top_text_margin"
                android:paddingHorizontal="@dimen/top_text_padding"
                android:layout_centerVertical="true"
                android:textColor="#e6000000"
                android:textSize="14sp"
                android:maxLines="1"
                android:lineSpacingExtra="5.2sp"
                android:gravity="left|center_vertical"
                android:text="@string/todesk"
                style="@style/style_55"
                />

            <TextView
                android:id="@+id/compat_tv"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_alignParentLeft="true"
                android:layout_marginHorizontal="@dimen/top_text_margin"
                android:paddingHorizontal="@dimen/top_text_padding"
                android:layout_centerVertical="true"
                android:textColor="#e6000000"
                android:textSize="14sp"
                android:maxLines="1"
                android:lineSpacingExtra="5.2sp"
                android:gravity="left|center_vertical"
                android:text="@string/compatible_set"
                style="@style/style_55"
                />
            <TextView
                android:id="@+id/ifpin_tv"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_alignParentLeft="true"
                android:layout_marginHorizontal="@dimen/top_text_margin"
                android:paddingHorizontal="@dimen/top_text_padding"
                android:layout_centerVertical="true"
                android:textColor="#e6000000"
                android:textSize="14sp"
                android:lineSpacingExtra="5.2sp"
                android:gravity="left|center_vertical"
                android:text="@string/pin"
                style="@style/style_55"
                />

            <View
                android:id="@+id/divide"
                android:layout_marginVertical="5dp"
                android:layout_width="130dp"
                android:layout_height="1dp"
                android:layout_marginHorizontal="10dp"
                android:background="#1a000000"
                />

            <TextView
                android:id="@+id/uninstall_tv"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_alignParentLeft="true"
                android:layout_marginHorizontal="@dimen/top_text_margin"
                android:paddingHorizontal="@dimen/top_text_padding"
                android:layout_centerVertical="true"
                android:textColor="#e6000000"
                android:textSize="14sp"
                android:lineSpacingExtra="5.2sp"
                android:gravity="left|center_vertical"
                android:text="@string/uninstall"
                style="@style/style_55"
                />

        </LinearLayout>
    </com.fde.taskplugin.view.LoadedCardView>
</LinearLayout>